{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 35,
  "lineage": "2ad3254f-bed6-c1e8-9c76-4c42218d6cf9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGatewayTF",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-007bc406a7e3302c0",
            "owner_id": "433434323910",
            "tags": {
              "Name": "My InternetGatewayTF"
            },
            "vpc_id": "vpc-0984d456826c6503a"
          },
          "depends_on": [
            "aws_vpc.VPC_TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "publicRouteTF",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-007bc406a7e3302c0",
            "id": "r-rtb-0f0454d5a6a823bf71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f0454d5a6a823bf7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.internetGatewayTF",
            "aws_route_table.routeTableTF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeTableTF",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f0454d5a6a823bf7",
            "owner_id": "433434323910",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "My VPC Route TableTF"
            },
            "vpc_id": "vpc-0984d456826c6503a"
          },
          "depends_on": [
            "aws_vpc.VPC_TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08198863debe013d5",
            "route_table_id": "rtb-0f0454d5a6a823bf7",
            "subnet_id": "subnet-03ad67c3378b09a90"
          },
          "depends_on": [
            "aws_route_table.routeTableTF",
            "aws_subnet.PublicSubnetTF1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01113fc471f32b783",
            "route_table_id": "rtb-0f0454d5a6a823bf7",
            "subnet_id": "subnet-09461e234f66b899b"
          },
          "depends_on": [
            "aws_route_table.routeTableTF",
            "aws_subnet.PublicSubnetTF2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a853afc920fcda18",
            "route_table_id": "rtb-0f0454d5a6a823bf7",
            "subnet_id": "subnet-078ad05c118771bb6"
          },
          "depends_on": [
            "aws_route_table.routeTableTF",
            "aws_subnet.PublicSubnetTF3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetTF1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433434323910:subnet/subnet-03ad67c3378b09a90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03ad67c3378b09a90",
            "map_public_ip_on_launch": true,
            "owner_id": "433434323910",
            "tags": {
              "Name": "My VPC SubnetTF1"
            },
            "vpc_id": "vpc-0984d456826c6503a"
          },
          "depends_on": [
            "aws_vpc.VPC_TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetTF2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433434323910:subnet/subnet-09461e234f66b899b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09461e234f66b899b",
            "map_public_ip_on_launch": true,
            "owner_id": "433434323910",
            "tags": {
              "Name": "My VPC SubnetTF2"
            },
            "vpc_id": "vpc-0984d456826c6503a"
          },
          "depends_on": [
            "aws_vpc.VPC_TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetTF3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433434323910:subnet/subnet-078ad05c118771bb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-078ad05c118771bb6",
            "map_public_ip_on_launch": true,
            "owner_id": "433434323910",
            "tags": {
              "Name": "My VPC SubnetTF3"
            },
            "vpc_id": "vpc-0984d456826c6503a"
          },
          "depends_on": [
            "aws_vpc.VPC_TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_TF",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433434323910:vpc/vpc-0984d456826c6503a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b27e2c1078267409",
            "default_route_table_id": "rtb-0a0824463b004a795",
            "default_security_group_id": "sg-0a062d8809f72eba6",
            "dhcp_options_id": "dopt-0bf8e7c762a0fcc77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0984d456826c6503a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a0824463b004a795",
            "owner_id": "433434323910",
            "tags": {
              "Name": "VPC_TF"
            }
          }
        }
      ]
    }
  ]
}